@@ -1,5 +1,5 @@
 #
-# "$Id: Makefile,v 1.12.2.6 2004/05/27 18:43:14 mike Exp $"
+# "$Id: Makefile,v 1.12.2.7 2004/06/17 14:09:00 mike Exp $"
 #
 #   Man page makefile for the Common UNIX Printing System (CUPS).
 #
@@ -37,7 +37,7 @@ LANGDIRS =	fr
 # Make everything...
 #
 
-all:	$(CAT1) $(CAT3) $(CAT5) $(CAT8)
+all:	$(CAT1) $(CAT5) $(CAT8)
 	for dir in $(LANGDIRS); do \
 		echo "Making all in man/$$dir..."; \
 		(cd $$dir; $(MAKE) $(MFLAGS) all); \
@@ -49,7 +49,7 @@ all:	$(CAT1) $(CAT3) $(CAT5) $(CAT8)
 #
 
 clean:
-	$(RM) $(CAT1) $(CAT3) $(CAT5) $(CAT8)
+	$(RM) $(CAT1) $(CAT5) $(CAT8)
 	for dir in $(LANGDIRS); do \
 		echo "Cleaning all in man/$$dir..."; \
 		(cd $$dir; $(MAKE) $(MFLAGS) clean); \
@@ -75,11 +75,6 @@ install:	all
 	done
 	$(RM) $(MANDIR)/man1/cancel.1
 	$(LN) lp.1 $(MANDIR)/man1/cancel.1
-	$(INSTALL_DIR) $(PMANDIR)/man3
-	for file in $(MAN3); do \
-		echo Installing $$file in $(PMANDIR)/man3...; \
-		$(INSTALL_MAN) $$file $(PMANDIR)/man3/`basename $$file man`3; \
-	done
 	$(INSTALL_DIR) $(MANDIR)/man5
 	for file in $(MAN5); do \
 		echo Installing $$file in $(MANDIR)/man5...; \
@@ -101,11 +96,6 @@ install:	all
 	done
 	$(RM) $(MANDIR)/cat1/cancel.$(CAT1EXT)
 	$(LN) lp.$(CAT1EXT) $(MANDIR)/cat1/cancel.$(CAT1EXT)
-	$(INSTALL_DIR) $(PMANDIR)/cat3
-	for file in $(CAT3); do \
-		echo Installing $$file in $(PMANDIR)/cat3...; \
-		$(INSTALL_MAN) $$file $(PMANDIR)/cat3; \
-	done
 	$(INSTALL_DIR) $(MANDIR)/cat5
 	for file in $(CAT5); do \
 		echo Installing $$file in $(MANDIR)/cat5...; \
@@ -127,5 +117,5 @@ install:	all
 
 
 #
-# End of "$Id: Makefile,v 1.12.2.6 2004/05/27 18:43:14 mike Exp $".
+# End of "$Id: Makefile,v 1.12.2.7 2004/06/17 14:09:00 mike Exp $".
 #
